--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="author" content="Corpmart"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="pre-approved businesses, business for sale, business in India, verified business, best value for business, sell my business, buy businesses, small business for small, sell a business online, acquire a business online, best price for businesses, start up for sale, company for sale, buy pre-owned business, buy pre-owned company, verified companies for for sale, running business for sale">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Trusted platform for acquiring pre-verified businesses, selling businesses at a profit across India within few clicks."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
