--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="author" content="Corpmart"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="pre-approved businesses, business for sale, business in India, verified business, best value for business, sell my business, buy businesses, small business for small, sell a business online, acquire a business online, best price for businesses, start up for sale, company for sale, buy pre-owned business, buy pre-owned company, verified companies for for sale, running business for sale">
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Trusted platform for acquiring pre-verified businesses, selling businesses at a profit across India within few clicks."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="author" content="Corpmart" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="keywords"
+    content="pre-approved businesses, business for sale, business in India, verified business, best value for business, sell my business, buy businesses, small business for small, sell a business online, acquire a business online, best price for businesses, start up for sale, company for sale, buy pre-owned business, buy pre-owned company, verified companies for for sale, running business for sale">
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Trusted platform for acquiring pre-verified businesses, selling businesses at a profit across India within few clicks." />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -26,12 +29,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CorpMart - One Stop Solution for Business Acquisition</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>CorpMart - One Stop Solution for Business Acquisition</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -41,5 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
