--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f674451ddcc360019c41eaf&product=inline-share-buttons" async="async"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="author" content="Corpmart" />
@@ -10,6 +11,7 @@
     content="pre-approved businesses, business for sale, business in India, verified business, best value for business, sell my business, buy businesses, small business for small, sell a business online, acquire a business online, best price for businesses, start up for sale, company for sale, buy pre-owned business, buy pre-owned company, verified companies for for sale, running business for sale">
   <meta name="theme-color" content="#000000" />
   <meta name="description"
+    id="meta-desc"
     content="Trusted platform for acquiring pre-verified businesses, selling businesses at a profit across India within few clicks." />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
